# Finance-Data-Processing-and-Access-Control-Backend

./: README.md  pyproject.toml
src/: database.py  main.py
src/config/: database.py  security.py
src/models/: financial_rec_model.py  transaction.py  user.py  user_model.py
src/routes/: auth.py  dashboard.py  transaction.py  user.py
src/schemas/: transaction.py  user.py
src/services/: auth.py  dashboard.py  transaction.py  user.py
