[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"
[project]
name= Finance Data Processing and Access Control Backend
dependencies = [
    "fastapi",
    "sqlmodel",
    "psycopg2-binary",
    "python-dotenv",
    "passlib",
    "python-jose",
    "pydantic[email]"
]
requires-python = ">=3.9"